Tweak css and colors a bit.
- Make the header use a background color.
- Set the theme color to use the header background color.
- Update the manifest colors.

--- a/manifest.json
+++ b/manifest.json
@@ -19,8 +19,8 @@
         }
     ],
     "start_url": "fp30remote.html",
-    "background_color": "#666666",
+    "background_color": "#464ba3",
     "display": "standalone",
-    "theme_color": "#666666",
+    "theme_color": "#464ba3",
     "description": "FP-30 Remote Control"
 }
