--- a/manifest.json
+++ b/manifest.json
@@ -8,9 +8,24 @@
             "sizes": "any"
         },
         {
+            "src": "icon-32.png",
+            "type": "image/png",
+            "sizes": "32x32"
+        },
+        {
+            "src": "icon-128.png",
+            "type": "image/png",
+            "sizes": "128x128"
+        },
+        {
             "src": "icon-192.png",
             "type": "image/png",
             "sizes": "192x192"
+        },
+        {
+            "src": "icon-256.png",
+            "type": "image/png",
+            "sizes": "256x256"
         },
         {
             "src": "icon-512.png",
