--- a/manifest.json
+++ b/manifest.json
@@ -34,8 +34,8 @@
         }
     ],
     "start_url": "fp30remote.html",
-    "background_color": "#464ba3",
+    "background_color": "#002b36",
     "display": "standalone",
-    "theme_color": "#464ba3",
+    "theme_color": "#268bd2",
     "description": "FP-30 Remote Control"
 }
